@@ -1,9 +1,11 @@
 sourceforge (2.6-0+12+) unstable; urgency=low
 
   * [Christian] Added a dump and restore option to install-db.sh
-  * [Christian] Added themeable main page support 
+  * [Christian] Added themeable main page support
+  * [Christian] Rewritting of trove_getcatlisting function to 
+    return a string instead of direct printing
 
- -- Christian Bayle <bayle@debian.org>  Mon,  8 Jul 2002 14:04:45 +0200
+ -- Christian Bayle <bayle@debian.org>  Mon,  8 Jul 2002 22:38:47 +0200
 
 sourceforge (2.6-0+12) unstable; urgency=low
 
